Fix horizontal white space in content divs

--- a/_sass/_content.sass
+++ b/_sass/_content.sass
@@ -1,7 +1,10 @@
 #content
+  box-sizing: border-box
   width: 100%
   max-width: 40em
   align-self: center
+  padding: 0 1rem
 
 #content-full-width
-  margin: 0 1em
+  box-sizing: border-box
+  padding: 0 1rem
